refactoring: MutationsSet